--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
   <link href="style.css" rel="stylesheet">
 </head>
 
-<body>
+<body onload="renderData()">
   <div class="container">
-    <div class="row justify-content-center categories">
-      <div class="col-11 categories-column">
-        <button type="button" id="head" class="btn shop-button btn-lg btn-block">Helmets</button>
-        <button type="button" id="chest" class="btn shop-button btn-lg btn-block">Chests</button>
-        <button type="button" id="gloves" class="btn shop-button btn-lg btn-block">Arms</button>
-        <button type="button" id="waist" class="btn shop-button btn-lg btn-block">Waist</button>
-        <button type="button" id="legs" class="btn shop-button btn-lg btn-block">Legs</button>
+    <!--
+      <div class="row justify-content-center categories">
+        <div class="col-11 contents-column">
+          <button type="button" id="head" class="btn shop-button btn-lg btn-block">Helmets</button>
+          <button type="button" id="chest" class="btn shop-button btn-lg btn-block">Chests</button>
+          <button type="button" id="gloves" class="btn shop-button btn-lg btn-block">Arms</button>
+          <button type="button" id="waist" class="btn shop-button btn-lg btn-block">Waist</button>
+          <button type="button" id="legs" class="btn shop-button btn-lg btn-block">Legs</button>
+        </div>
       </div>
-    </div>
-
+    -->
   </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-  <script src="components/helmets.js"></script>
   <script src="main.js"></script>
 </body>
 
