--- a/landingpage.html
+++ b/landingpage.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-10">
+      <div class="row justify-content-center">
+        <div class="col-11 contents-column">
             <h1 class="app-title">Monster Hunter World Armory</h1>
           </div>
         </div>
