--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body onload="renderData()">
+  <nav class="navbar navbar-light justify-content-between nav-style d-none">
+    <a class="home-button" href="#">Home</a>
+  </nav>
   <div class="container">
     <!--
       <div class="row justify-content-center categories">
