browse shop complete

--- a/index.html
+++ b/index.html
@@ -75,11 +75,10 @@
             <button type="button" class="btn purchase-button btn-success">
               <div class="row">
                 <div class="col-7">Purchase</div>
-                <div class="col">100g</div>
+                <div id="stats-price" class="col">100g</div>
               </div>
             </button>
             <button type="button" class="btn close-button btn-secondary" data-dismiss="modal">Close</button>
-          </div>
           </div>
         </div>
       </div>
