--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   <nav class="navbar fixed-top navbar-light justify-content-between nav-style d-none">
     <a class="home-button" href="#">Home</a>
   </nav>
-  <div class="container">
 
+  <!--Content-->
+  <div class="container">
   </div>
 
   <!--Modal Overlay-->
-  <div class="modal fade" id="gearStats" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal fade" id="gearStats" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <!--actual modal window-->
       <div class="modal-content container">
@@ -65,14 +66,13 @@
             <div class="col skills text-center">
               <div id="skills-list" class="slots-skills">Skills
               </div>
-
             </div>
           </div>
         </div>
         <!--footer/buttons-->
         <div class="modal-footer">
           <div class="button-container">
-            <button type="button" class="btn purchase-button btn-success">
+            <button type="button" id="confirm-purchase" class="btn purchase-button btn-success" data-dismiss="modal">
               <div class="row">
                 <div class="col-7">Purchase</div>
                 <div id="stats-price" class="col">100g</div>
@@ -85,9 +85,20 @@
     </div>
   </div>
 
+  <div class="modal fade" id="thank-you" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="thank-you-modal container">
+        <div class="modal-body text-center">
+          <p class="thank-you-text">Thank you!</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <script src="components/inventory.js"></script>
   <script src="main.js"></script>
 </body>
 
