--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="style.css" rel="stylesheet">
 </head>
 
-<body onload="renderData()">
+<body>
   <nav class="navbar fixed-top navbar-light justify-content-between nav-style d-none">
     <a class="home-button" href="#">Home</a>
   </nav>
@@ -95,9 +95,12 @@
     </div>
   </div>
 
+  <div class="loader spinner-border text-dark"></div>
+
   <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <script src="config.js"></script>
   <script src="components/inventory.js"></script>
   <script src="main.js"></script>
 </body>
