--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     </div>
   </div>
 
+  <div class="disable-buttons"></div>
   <div class="loader spinner-border text-dark"></div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
