--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
   <title>API Hackathon</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+    crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
   <nav class="navbar fixed-top navbar-light justify-content-between nav-style d-none">
-    <a class="home-button" href="#">Home</a>
+    <i class="fa fa-chevron-left back-button" aria-hidden="true"><span class="back-text"> Back</span></i>
+    <!-- <i class="fa fa-home" aria-hidden="true"></i> -->
+    <!-- <a class="home-button" href="#">Home</a> -->
   </nav>
 
   <!--Content-->
