--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <i class="fa fa-chevron-left back-button" aria-hidden="true"><span class="back-text"> Back</span></i>
     <!-- <i class="fa fa-home" aria-hidden="true"></i> -->
     <!-- <a class="home-button" href="#">Home</a> -->
+    <div class="currency"><span class="currency-count">100000</span><span>g</span></div>
   </nav>
 
   <!--Content-->
