--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 </head>
 
 <body>
-  <nav class="navbar fixed-top navbar-light justify-content-between nav-style d-none">
+  <nav class="navbar navbar-light justify-content-between nav-style d-none">
     <i class="fa fa-chevron-left back-button" aria-hidden="true"><span class="back-text"> Back</span></i>
     <!-- <i class="fa fa-home" aria-hidden="true"></i> -->
     <!-- <a class="home-button" href="#">Home</a> -->
-    <div class="currency"><span class="currency-count">100000</span><span>g</span></div>
+    <div class="currency"><span class="currency-count"></span><span>g</span></div>
   </nav>
 
   <!--Content-->
-  <div class="container">
+  <div class="container background">
   </div>
 
   <!--Modal Overlay-->
