--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 <body>
   <nav class="navbar navbar-light justify-content-between nav-style d-none">
     <i class="fa fa-chevron-left back-button" aria-hidden="true"><span class="back-text"> Back</span></i>
-    <!-- <i class="fa fa-home" aria-hidden="true"></i> -->
-    <!-- <a class="home-button" href="#">Home</a> -->
     <div class="currency"><span class="currency-count"></span><span>g</span></div>
   </nav>
 
@@ -30,33 +28,33 @@
       <div class="modal-content container">
         <div class="row stats-header vertical-align">
           <div class="col-4 img-container">
-            <img id="stats-image" src="https://assets.mhw-db.com/armor/1670b4719dbca20fb98a3a2e5b7995d4ab740d85.70ca8a43f656a675a5e3c9ef32c75e07.png" width="100">
+            <img id="stats-image" width="100">
           </div>
           <div class="col gear-text">
-            <h3 class="text-center" id="stats-name">Rath Soul Helm Alpha</h3>
+            <h3 class="text-center" id="stats-name"></h3>
           </div>
         </div>
         <div class="modal-body">
           <div class="row">
             <div class="col defense-stats">
-              <div>Defense: <span id="defense">100</span></div>
-              <div>Fire Resist: <span id="fire-res">100</span></div>
-              <div>Water Resist: <span id="water-res">100</span></div>
+              <div>Defense: <span id="defense"></span></div>
+              <div>Fire Resist: <span id="fire-res"></span></div>
+              <div>Water Resist: <span id="water-res"></span></div>
             </div>
             <div class="col defense-stats">
-              <div>Thunder Resist: <span id="thunder-res">100</span></div>
-              <div>Ice Resist: <span id="ice-res">100</span></div>
-              <div>Dragon Resist: <span id="dragon-res">100</span></div>
+              <div>Thunder Resist: <span id="thunder-res"></span></div>
+              <div>Ice Resist: <span id="ice-res"></span></div>
+              <div>Dragon Resist: <span id="dragon-res"></span></div>
             </div>
           </div>
           <div class="row">
             <div class="col text-center">
               <div class="slots-skills">Slots:
-                <span id="gear-slot1">0</span>
+                <span id="gear-slot1"></span>
                 <span>-</span>
-                <span id="gear-slot2">0</span>
+                <span id="gear-slot2"></span>
                 <span>-</span>
-                <span id="gear-slot3">0</span>
+                <span id="gear-slot3"></span>
               </div>
             </div>
           </div>
