added page name, prevent double purchase

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
   <nav class="navbar navbar-light justify-content-between nav-style d-none">
     <i class="fa fa-chevron-left back-button" aria-hidden="true"><span class="back-text"> Back</span></i>
+    <div class="page-name pl-2"></div>
     <div class="currency"><span class="currency-count"></span><span>g</span></div>
   </nav>
 
@@ -70,7 +71,7 @@
             <button type="button" id="confirm-purchase" class="btn purchase-button btn-success" data-dismiss="modal">
               <div class="row">
                 <div class="col-7">Purchase</div>
-                <div id="stats-price" class="col">100g</div>
+                <div id="stats-price" class="col"></div>
               </div>
             </button>
             <button type="button" class="btn close-button btn-secondary" data-dismiss="modal">Close</button>
