--- a/index.html
+++ b/index.html
@@ -15,10 +15,25 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-light justify-content-between nav-style d-none">
+  <nav id="nav-top" class="navbar justify-content-between nav-style d-none">
     <i class="fa fa-chevron-left back-button" aria-hidden="true"><span class="back-text"> Back</span></i>
     <div class="page-name pl-2"></div>
     <div class="currency"><span class="currency-count"></span><span>g</span></div>
+  </nav>
+
+  <nav id="nav-bottom" class="navbar bottom-nav-style fixed-bottom row d-none">
+    <div class="col text-center">
+      <div id="footer-shop-button" class="footer-button">
+        <img class="footer-icon" src="assets/chest-icon.png">
+        <div class="footer-text">Shop</div>
+      </div>
+    </div>
+    <div class="col text-center">
+      <div id="footer-backpack-button" class="footer-button">
+        <img class="footer-icon" src="assets/storage-icon.png">
+        <div class="footer-text">Backpack</div>
+      </div>
+    </div>
   </nav>
 
   <div class="container background">
