scrolling cutoff fix

--- a/index.html
+++ b/index.html
@@ -106,6 +106,16 @@
     </div>
   </div>
 
+  <div class="modal fade" id="request-failed" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="error-modal container">
+        <div class="modal-body text-center">
+          <p class="thank-you-text">Request Failed<br>Please Try Again</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="disable-buttons"></div>
   <div class="loader spinner-border text-dark"></div>
 
