--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <div class="window">
   <nav id="nav-top" class="navbar justify-content-between nav-style d-none">
     <i class="fa fa-chevron-left back-button" aria-hidden="true"><span class="back-text"> Back</span></i>
     <div class="page-name pl-2"></div>
@@ -124,6 +125,7 @@
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   <script src="components/inventory.js"></script>
   <script src="main.js"></script>
+  </div>
 </body>
 
 </html>
