--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <h3 class="text-center" id="stats-name"></h3>
             </div>
           </div>
-          <div class="modal-body">
+          <div class="modal-body gear-content">
             <div class="row">
               <div class="col defense-stats">
                 <div>Defense: <span id="defense"></span></div>
