--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
     crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" type="image/png" href="./assets/mhw-icon.png">
+  <link rel="icon" href="./assets/mhw-icon.png" type="image/ico" />
   <link href="style.css" rel="stylesheet">
 </head>
 
